wp-content/themes/vantage/partystart.css
/* ... */
.entry-content .job_listing_preview_title h2, .job_listing_preview_title h2 {
    font-size: 200%;
    padding-bottom: 10px;
    background: #fff;
    padding-top: 10px;
}

.single_job_listing .meta {
    background: #fff;
    padding-bottom: 10px;
    padding-top: 10px;
}

.job_listing_preview h1 {
    background: rgb(255, 255, 255) none repeat scroll 0% 0%;
    padding-bottom: 10px;
    padding-top: 10px;
}

/*Fjerner posted on by over coverbildet*/
.bp_members .entry-header .entry-meta, #rtmedia-nav-item-all, .rtm-gallery-title, #-personal-li {
    display: none !important;;
}

.job_listing_preview {
    text-align: center;
    background: rgba(255, 255, 255, 0.9) none repeat scroll 0% 0%;
}

#mceu_21-0 {
    display: none;
}

#main {
    margin: 0 !important;
    padding: 0 !important;
}

#scrolleMedlemmerForsiden {
    position: relative;
    height: 220px;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    margin-left: 0;
    padding-left: 0;
    background: white none repeat scroll 0% 0%;
    padding-top: 10px;
    padding-bottom: 10px;
}

#forsideMedlemmerTittel {
    width: 100%;
    text-align: center;
    padding: 5px;
    font-size: 130%;
}

#forsideMedlemmerTittel h3 {
    /*background: white;*/
    /*	padding-bottom:10px;
        padding-top:10px
        color:#2F3033 none repeat scroll 0% 0%;*/
    color: black;
}

#pgc-2-3-0 ul#members-list {
    width: 2100px;
    margin: 0px 0px 0px 0px !important;;
}

#pgc-2-3-0 #members-list li {
    margin-left: 7px;
    width: 200px;
    height: 200px;
    float: left;
    position: relative;
    list-style: none;
    overflow: hidden;
}

#buddypress ul.item-list li {
    padding: none !important;
}

#buddypress ul.item-list li div.item-title span {
    color: #fff!important;
}
.member-filter{
    -moz-border-radius-topleft: 5px;
    /* -webkit-border-top-left-radius: 5px; */
    /* border-top-left-radius: 5px; */
    -moz-border-radius-topright: 5px;
    /* -webkit-border-top-right-radius: 5px; */
    /* border-top-right-radius: 5px; */
    /* background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.6))); */
    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5));
    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5));
    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5));
    background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5));
    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    -webkit-transition: all 300ms;
    -moz-transition: all 300ms;
    transition: all 300ms;
}
#buddypress #members-list li:hover .member-filter{
    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index:99;
    -webkit-transition: all 300ms;
    -moz-transition: all 300ms;
    transition: all 300ms;
}
#members-list li .musikertype {
z-index:100!important;
    width: 40px;
    position: absolute;
    /* background: #303030 none repeat scroll 0% 0%; */
    color: #FFF;
    padding-top: 5px;
    z-index: 10;
    float: left;
    bottom: 0px;
    padding-bottom: 5px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    padding-top: 13px;
    border: 2px solid white;
    top: -120px;
    left: 89px;
}

#members-list li .item-avatar img {
    width: 100%;
    height: 100%;
}

/*
#pgc-2-3-0 #members-list li .item .item-title {
    text-align: center;
    width: 100%;
}
*/
#members-list li .item .item-title a {
    /*color: white;
    text-decoration: none;
    padding-top: 5px;
    padding-bottom: 5px; */
    /* margin: auto;
     text-align: center;
     position: absolute;
     bottom: 0px;
     background: rgba(47, 48, 51, 0.8) none repeat scroll 0% 0%;
     width: 100%;
     left: 0px; */
    margin: auto !important;
    line-height: 1;
    color: rgb(48,48,48) !important;
    text-decoration: none;
}

.brukernavnmeldemsiden a{
    text-decoration: none;
    color:white!important;
    font-weight:600;
    z-index:100 !important;
}


#pgc-2-3-0 #members-list li .item .item-meta .activity {
    opacity: 0;
}

#expandBtnonomss {
    margin: auto;
    text-align: center;
    color: #2F3033;
    border: 2px solid #2F3033;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 15px;
    padding-bottom: 15px;
    text-decoration: none;
}

#expandBtnonomss:hover {
    background: #2F3033;
    color: White;
}

#omOssBtnContainer {
    text-align: center;
}

#omOssBtnContainer .hidden-content {
    text-align: left;
}

/*Registerer bruker*/
#signupformheader {
    font-size: 1.7em;
    text-align: center;
    line-height: 1.5;
    margin-bottom: 10px;
}

#signuptekst {
    width: 100%;
    text-align: left;
}

.register-section {
    width: 100% !important;
}

.register-section label {
    width: 29% !important;
    float: left;
    margin-top: 20px;
}

.register-section input[type="text"], .register-section input[type="email"], .register-section input[type="password"] {
    width: 70% !important;
    margin-top: 15px;
}

.register-section .checkbox label {
    float: none;
}

.register-section .radio {
    width: 100%;
    float: left;
}

#field_111_0 {
    margin-top: 10px;
}

.register-section .radio label {
    float: none;
}
/* ... */

